helios-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p codex-core -- --exact…


› Ask Helios to do anything

  ? for shortcuts            100% context left
